# itasc_tests

./: .gitignore  README  stack.xml
itasc_robot_pr2_test/: CMakeLists.txt  GDBrun.sh  README  manifest.xml  run.ops  run.sh  runControllers.sh
itasc_robot_pr2_test/cpf/: nAxesGenerator.cpf  reporter.cpf  test_supervisor.cpf
itasc_robot_pr2_test/scripts/: composite_test_fsm.lua  running_test_coordination.lua  test_fsm.lua  test_supervisor.lua
itasc_robot_pr2_test/src/: itasc_robot_pr2_test.cpp  itasc_robot_pr2_test.cpp~  itasc_robot_pr2_test.hpp  itasc_robot_pr2_test.hpp~
itasc_solver_test/: CMakeLists.txt  GDBrun.sh  manifest.xml  run.ops  run.sh  tester.cpf  tester.sh
itasc_solver_test/cpf/: 01-equality.cpf  02-inequality.cpf  03-test_in_eq.cpf  04-test_in_eq.cpf  05-test_in_eq.cpf  06-equality-wq.cpf  07-equality-wy.cpf  inequalityTest1.cpf  tester.cpf
itasc_solver_test/src/: .itasc_solver_wdlspriorvel_test.cpp.swp  .itasc_solver_wdlspriorvel_test.hpp.swp  itasc_solver_wdlspriorvel_test.cpp  itasc_solver_wdlspriorvel_test.hpp  testSolver.cpp
